Record what Java 25 needs, and what is no longer ours
Three core-side defects stood between a coremod pack and a modern JVM,
and all three are fixed: FML's coremod jars now reach the application
class path through the door Java 9+ actually provides, the class path is
read the way launchwrapper reads it on Java 8, and the core's own ASM
visitors read class files as new as the ASM it ships.

What is left is third-party bytecode that Java 8's verifier accepted and
modern ones reject - a mod's ASM4/5 transformer that cannot read a class
carrying nestmates, and a malformed constant pool entry in a mod's
lambda-carrying interface. Both were checked against this core first:
the ASM visitor fix did not change the first, and the core's own
transformer pipelines were tested locally against real class files for
the second and round-trip it correctly.

The notes say so, and say why the tempting workaround - skipping a mod's
transformer when it throws - is worse than not starting: it runs mods
whose transformations silently did not apply.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013i11qXKChMW3pwGD4pkyhB